Agregar configuracion inicial de pruebas unitarias automaticas, junto con el manejo dinamico niveles de trazas de log

--- a/demo-api/src/main/resources/application.properties
+++ b/demo-api/src/main/resources/application.properties
@@ -9,3 +9,6 @@ quarkus.smallrye-openapi.info-contact-name=Jesus Aguirre
 quarkus.smallrye-openapi.info-contact-url=https://about.me/jesusaguirre
 quarkus.smallrye-openapi.info-license-name=MIT
 quarkus.smallrye-openapi.info-license-url=https://mit-license.org/
+
+#Continuous testing to start automatically
+quarkus.test.continuous-testing=enabled
