--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,22 +18,29 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK Temurin 19
-      uses: actions/setup-java@v1.4.4
+    - uses: actions/checkout@v3.5.3
+    - name: Set up JDK 19 Temurin
+      uses: actions/setup-java@v3
       with:
-        java-version: '19'
         distribution: 'temurin'
-        cache: maven
+        java-version: '19'
     
     - name: Cache Maven packages
-      uses: actions/cache@v2.1.8
+      uses: actions/cache@v2
       with:
         path: ~/.m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
+
+    - name: Set up Node.js 16.x
+      uses: actions/setup-node@v2
+      with:
+        node-version: '16'
     
     - name: Get version from pom.xml
       id: get-version
