--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,8 +77,8 @@ jobs:
         platforms: linux/amd64,linux/arm64
         push: true
         tags: |
-          ghcr.io/user/app:latest
-          ghcr.io/user/app:1.0.0-SNAPSHOT
+          ghcr.io/upaio/quarkus-microservices-chassis:latest
+          ghcr.io/upaio/quarkus-microservices-chassis:1.0.0-SNAPSHOT
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
