--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,3 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
 
 name: Java CI with Maven
 
@@ -53,32 +46,32 @@ jobs:
       if: ${{ success() }}
       run: mvn -B package --file pom.xml -DskipTests
 
-    - name: Set up QEMU
-      if: ${{ success() }}
-      uses: docker/setup-qemu-action@v2.2.0
-
-    - name: Set up Docker Buildx
-      if: ${{ success() }}
-      uses: docker/setup-buildx-action@v2.7.0
-
-    - name: Login to GitHub Container Registry
-      if: ${{ success() }}
-      uses: docker/login-action@v2.2.0
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.REGISTRY_TOKEN }}
-
-    - name: Build and push
-      if: ${{ success() }}
-      uses: docker/build-push-action@v4.1.1
-      with:
-        context: .
-        platforms: linux/amd64,linux/arm64
-        push: true
-        tags: |
-          ghcr.io/${{ github.repository_owner }}/quarkus-microservices-chassis:latest
-          ghcr.io/${{ github.repository_owner }}/quarkus-microservices-chassis:1.0.0-SNAPSHOT
+#    - name: Set up QEMU
+#      if: ${{ success() }}
+#      uses: docker/setup-qemu-action@v2.2.0
+#
+#    - name: Set up Docker Buildx
+#      if: ${{ success() }}
+#      uses: docker/setup-buildx-action@v2.7.0
+#
+#    - name: Login to GitHub Container Registry
+#      if: ${{ success() }}
+#      uses: docker/login-action@v2.2.0
+#      with:
+#        registry: ghcr.io
+#        username: ${{ github.actor }}
+#        password: ${{ secrets.REGISTRY_TOKEN }}
+#
+#    - name: Build and push
+#      if: ${{ success() }}
+#      uses: docker/build-push-action@v4.1.1
+#      with:
+#        context: .
+#        platforms: linux/amd64,linux/arm64
+#        push: true
+#        tags: |
+#          ghcr.io/${{ github.repository_owner }}/quarkus-microservices-chassis:latest
+#          ghcr.io/${{ github.repository_owner }}/quarkus-microservices-chassis:1.0.0-SNAPSHOT
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
