--- a/.github/workflows/ci-container.yml
+++ b/.github/workflows/ci-container.yml
@@ -8,9 +8,6 @@ on:
       - 'main'
     tags:
       - 'v*'
-  pull_request:
-    branches:
-      - 'main'
 
 jobs:
   build:
@@ -39,16 +36,13 @@ jobs:
         run: mvn -B package --file pom.xml -DskipTests
 
       - name: Set up QEMU
-        if: ${{ github.event_name != 'pull_request' }}
         uses: docker/setup-qemu-action@v2.2.0
 
       - name: Set up Docker Buildx
-        if: ${{ github.event_name != 'pull_request' }}
         uses: docker/setup-buildx-action@v2.7.0
 
       - name: Docker meta
         id: meta
-        if: ${{ github.event_name != 'pull_request' }}
         uses: docker/metadata-action@v4.6.0
         with:
           images: ${{ github.repository }}
@@ -59,7 +53,6 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
 
       - name: Login to GitHub Container Registry
-        if: ${{ github.event_name != 'pull_request' }}
         uses: docker/login-action@v2.2.0
         with:
           registry: ghcr.io
@@ -70,6 +63,6 @@ jobs:
         uses: docker/build-push-action@v4.1.1
         with:
           context: .
-          push: ${{ github.event_name != 'pull_request' }}
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
