--- a/.github/workflows/ci-container.yml
+++ b/.github/workflows/ci-container.yml
@@ -64,5 +64,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: ${{ join(map(steps.meta.outputs.tags, 'ghcr.io/${{ github.repository_owner }}/'), '\n') }}
           labels: ${{ steps.meta.outputs.labels }}
