--- a/.github/workflows/ci-container.yml
+++ b/.github/workflows/ci-container.yml
@@ -64,5 +64,6 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ join(map(steps.meta.outputs.tags, 'ghcr.io/${{ github.repository_owner }}/'), '\n') }}
+          tags: |
+            ${{ join(map(steps.meta.outputs.tags, 'ghcr.io/' + github.repository_owner + '/github.repository:'), '\n') }}
           labels: ${{ steps.meta.outputs.labels }}
