--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,59 @@ jobs:
       if: ${{ success() }}
       run: mvn -B package --file pom.xml -DskipTests
 
+    - name: Add label build successful to PR
+      if: ${{ success() }}
+      uses: actions/github-script@v6.4.1
+      with:
+        github-token: ${{ secrets.PR_ADD_LABEL_TOKEN }}
+        script: |
+          const { data: pullRequest } = await github.pulls.get({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            pull_number: context.payload.pull_request.number
+          });
+          const labels = pullRequest.labels.map(label => label.name);
+          if (labels.includes('build successful')) {
+            await github.issues.removeLabel({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            issue_number: context.payload.pull_request.number,
+            name: 'build error'
+            });
+          }
+          await github.issues.addLabels({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            issue_number: context.payload.pull_request.number,
+            labels: ['build successful']
+          });
+    - name: Add label build error to PR
+      if: ${{ failure() }}
+      uses: actions/github-script@v6.4.1
+      with:
+        github-token: ${{ secrets.PR_ADD_LABEL_TOKEN }}
+        script: |
+          const { data: pullRequest } = await github.pulls.get({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            pull_number: context.payload.pull_request.number
+          });
+          const labels = pullRequest.labels.map(label => label.name);
+          if (labels.includes('build successful')) {
+            await github.issues.removeLabel({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            issue_number: context.payload.pull_request.number,
+            name: 'build successful'
+            });
+          }
+          await github.issues.addLabels({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            issue_number: context.payload.pull_request.number,
+            labels: ['build error']
+          });
+
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@v3.0.2
