--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,38 +40,32 @@ jobs:
 
     - name: Add label build successful to PR
       if: ${{ success() }}
-      uses: actions/github-script@v6.4.1
+      uses: actions/github-script@v6
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
-          const { data: pullRequest } = await github.pulls.get({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            pull_number: context.payload.pull_request.number
-          });
-          await github.issues.addLabels({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
+          github.rest.issues.addLabels({
             issue_number: context.payload.pull_request.number,
-            labels: ['build successful']
-          });
-    - name: Add label build error to PR
-      if: ${{ failure() }}
-      uses: actions/github-script@v6.4.1
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        script: |
-          const { data: pullRequest } = await github.pulls.get({
             owner: context.repo.owner,
             repo: context.repo.repo,
-            pull_number: context.payload.pull_request.number
-          });
-          await github.issues.addLabels({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            issue_number: context.payload.pull_request.number,
-            labels: ['build error']
-          });
+            labels: ['Build successful']
+          })
+#    - name: Add label build error to PR
+#      if: ${{ failure() }}
+#      uses: actions/github-script@v6.4.1
+#      with:
+#        github-token: ${{ secrets.GITHUB_TOKEN }}
+#        script: |
+#          const { data: pullRequest } = await github.pulls.get({
+#            owner: context.repo.owner,
+#            repo: context.repo.repo,
+#            pull_number: context.payload.pull_request.number
+#          });
+#          await github.issues.addLabels({
+#            owner: context.repo.owner,
+#            repo: context.repo.repo,
+#            issue_number: context.payload.pull_request.number,
+#            labels: ['build error']
+#          });
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
