--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,23 +49,18 @@ jobs:
             repo: context.repo.repo,
             labels: ['Build successful']
           })
-#    - name: Add label build error to PR
-#      if: ${{ failure() }}
-#      uses: actions/github-script@v6.4.1
-#      with:
-#        github-token: ${{ secrets.GITHUB_TOKEN }}
-#        script: |
-#          const { data: pullRequest } = await github.pulls.get({
-#            owner: context.repo.owner,
-#            repo: context.repo.repo,
-#            pull_number: context.payload.pull_request.number
-#          });
-#          await github.issues.addLabels({
-#            owner: context.repo.owner,
-#            repo: context.repo.repo,
-#            issue_number: context.payload.pull_request.number,
-#            labels: ['build error']
-#          });
+
+    - name: Add label build error to PR
+      if: ${{ failure() }}
+      uses: actions/github-script@v6
+      with:
+        script: |
+          github.rest.issues.addLabels({
+            issue_number: context.payload.pull_request.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            labels: ['Build error']
+          })
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
