--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,7 @@ jobs:
           })
 
     - name: Add label build successful to PR
-      if: ${{ success() }}
+      if: ${{ success() && !contains(github.event.pull_request.labels.*.name, 'build successful') }}
       uses: actions/github-script@v6
       with:
         script: |
@@ -89,7 +89,7 @@ jobs:
           })
 
     - name: Add label build error to PR
-      if: ${{ failure() }}
+      if: ${{ failure() }} && !contains(github.event.pull_request.labels.*.name, 'build error') }}
       uses: actions/github-script@v6
       with:
         script: |
