--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -6,21 +6,13 @@ on:
       - opened
 
 jobs:
-  block-prs:
+  block-pr:
     runs-on: ubuntu-latest
     steps:
-      - name: Check PR for "build error" label
-        id: check-label
-        uses: actions/github-script@v6
-        with:
-          script: |
-            const labels = github.context.payload.pull_request.labels.map(label => label.name);
-            const isBuildError = labels.includes('build error');
-            console.log(`Build Error Label Found: ${isBuildError}`);
-            return { buildError: isBuildError }
-
-      - name: Block PR if "build error" label is present
-        if: steps.check-label.outputs.buildError == true && github.ref == 'refs/heads/main'
+      - name: Check PR Labels
         run: |
-          echo "This PR is blocked due to the 'build error' label."
-          exit 1
+          if [[ "$(echo ${{ github.event.pull_request.labels.*.name }})" == *"build error"* ]]; then
+            exit 1
+          fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
