--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,9 @@ name: Java CI with Maven
 
 on:
   pull_request:
-    branches: [ "main" ]
+    types: [opened, synchronize]
+    branches:
+      - main
 
 jobs:
   build:
