--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,18 +3,27 @@ name: Java CI with Maven
 
 on:
   pull_request:
-    types: [opened, synchronize]
     branches:
       - main
+      - fix-order-actions
+    types: [opened, synchronize]
 
 jobs:
-  build:
+  analyze-code-quality:
+    runs-on: ubuntu-latest
+    steps:
+    - name: SonarCloud Scan
+      uses: sonarsource/sonarcloud-github-action@v1.9.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
+  build-artefact:
+    needs: analyze-code-quality
     runs-on: ubuntu-latest
     defaults:
       run:
         shell: bash
-
     steps:
     - uses: actions/checkout@v3.5.3
     - name: Set up JDK 19 Temurin
@@ -22,14 +31,12 @@ jobs:
       with:
         distribution: 'temurin'
         java-version: '19'
-    
     - name: Cache Maven packages
       uses: actions/cache@v3.3.1
       with:
         path: ~/.m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
-    
     - name: Build with Maven
       if: ${{ success() }}
       run: |
@@ -38,7 +45,6 @@ jobs:
         else
           echo "BUILD_STATUS=false" >> $GITHUB_ENV
         fi
-
     - name: Resolve build error and add build successful label
       if: ${{ env.BUILD_STATUS && contains(github.event.pull_request.labels.*.name, 'build error') }}
       uses: actions/github-script@v6
@@ -57,7 +63,6 @@ jobs:
              repo: context.repo.repo,
              labels: ['build successful']
           })
-
     - name: Resolve build successful and add build error label
       if: ${{ !env.BUILD_STATUS && contains(github.event.pull_request.labels.*.name, 'build successful') }}
       uses: actions/github-script@v6
@@ -76,7 +81,6 @@ jobs:
              repo: context.repo.repo,
              labels: ['build error']
           })
-
     - name: Add label build successful to PR
       if: ${{ env.BUILD_STATUS && !contains(github.event.pull_request.labels.*.name, 'build successful') }}
       uses: actions/github-script@v6
@@ -88,7 +92,6 @@ jobs:
             repo: context.repo.repo,
             labels: ['build successful']
           })
-
     - name: Add label build error to PR
       if: ${{ !env.BUILD_STATUS && !contains(github.event.pull_request.labels.*.name, 'build error') }}
       uses: actions/github-script@v6
@@ -100,7 +103,6 @@ jobs:
             repo: context.repo.repo,
             labels: ['build error']
           })
-
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@v3.0.2
