Agregar cache a step de SonarCloud

--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -19,12 +19,18 @@ jobs:
        with:
          distribution: 'temurin'
          java-version: '19'
+     - name: Cache Maven packages
+       uses: actions/cache@v3.3.1
+       with:
+         path: ~/.m2
+         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+         restore-keys: ${{ runner.os }}-m2
      - name: Build and analyze
        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=upa-io_quarkus-microservices-chassis
-  build-artefact:
+  add-label-pr:
     needs: analyze-code-quality
     runs-on: ubuntu-latest
     defaults:
