Ajustes en Actions

--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -31,11 +31,15 @@ jobs:
          restore-keys: ${{ runner.os }}-m2
      - name: Build with Maven
        run: mvn clean install
-     - name: Build and analyze
+     - name: SonarCloud Scan
+       uses: SonarSource/sonarcloud-github-action@v1.9.1
        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-       run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=upa-io_quarkus-microservices-chassis -Pcoverage
+       with:
+        args:
+          -Dsonar.projectKey=upa-io_quarkus-microservices-chassis
+          -Dsonar.organization=upa-io
   add-label-pr:
     needs: analyze-code-quality
     runs-on: ubuntu-latest
