Agregar validacion de ruta de cambios en Actions

--- a/.github/workflows/ci-container.yml
+++ b/.github/workflows/ci-container.yml
@@ -7,6 +7,12 @@ on:
       - 'main'
     tags:
       - 'v*'
+    paths:
+      - 'pom.xml'
+      - 'src/main/java/**/*.java'
+      - 'src/main/test/**/*.java'
+      - '**/*.properties'
+
 jobs:
   build:
     runs-on: ubuntu-latest
