--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 quarkus.smallrye-openapi.info-title=Microservices Chassis
 %dev.quarkus.smallrye-openapi.info-title=Microservices Chassis (development)
 %test.quarkus.smallrye-openapi.info-title=Microservices Chassis (test)
-quarkus.smallrye-openapi.info-version=1.0.1-SNAPSHOT
-quarkus.smallrye-openapi.info-description=Microservices Chassis based in Quarkus 3.1.2.Final
+quarkus.smallrye-openapi.info-version=1.0.1
+quarkus.smallrye-openapi.info-description=Microservices Chassis based in Quarkus 3.4.3
 quarkus.smallrye-openapi.info-terms-of-service=Your terms here
 quarkus.smallrye-openapi.info-contact-email=info.aguirre.jesus@gmail.com
 quarkus.smallrye-openapi.info-contact-name=Jesus Aguirre
