--- a/.github/workflows/ci-native-container.yml
+++ b/.github/workflows/ci-native-container.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5.0.0
         with:
-          context: src/main/docker/Dockerfile.distroless
+          context: .
           push: true
           tags: latest
           labels: latest
