--- a/.github/workflows/ci-native-container.yml
+++ b/.github/workflows/ci-native-container.yml
@@ -32,6 +32,23 @@ jobs:
         if: ${{ success() }}
         run: mvn install -Dnative -Dquarkus.native.container-build=true -Dquarkus.native.builder-image=quay.io/quarkus/ubi-quarkus-mandrel-builder-image:jdk-20
       
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3.0.0
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3.0.0
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5.0.0
+        with:
+          images: ghcr.io/${{ github.repository }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+      
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3.0.0
         with:
@@ -44,7 +61,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: latest
-          labels: latest
-          secrets: |
-            GIT_AUTH_TOKEN=${{ secrets.REGISTRY_TOKEN }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
