--- a/.github/workflows/ci-native-container.yml
+++ b/.github/workflows/ci-native-container.yml
@@ -1,5 +1,5 @@
 
-name: Java CI with Docker
+name: CI - Build and push to GitHub Container Registry
 on:
   workflow_dispatch:
   push:
@@ -7,7 +7,6 @@ on:
       - 'main'
     tags:
       - 'v*'
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -27,17 +26,36 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-
       - name: Generate with Maven native-resources
-        if: ${{ success() }}
-        run: mvn install -Dnative -Dquarkus.native.container-build=true -Dquarkus.native.builder-image=quay.io/quarkus/ubi-quarkus-mandrel-builder-image:jdk-20
-      
+        run: |
+          mvn install \
+          -DskipTests \
+          -Dnative \
+          -Dquarkus.native.container-build=true \
+          -Dquarkus.native.builder-image=quay.io/quarkus/ubi-quarkus-mandrel-builder-image:jdk-20
+        # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
+      - name: Update dependency graph
+        uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+      - uses: actions/upload-artifact@v3.1.3
+        with:
+          name: target
+          path: target
+    
+  push-to-registry:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+    steps:
+      - uses: actions/checkout@v4.1.0
+      - uses: actions/download-artifact@v3
+        with:
+          name: target
+          path: target
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3.0.0
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3.0.0
-
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5.0.0
@@ -48,14 +66,12 @@ jobs:
             type=ref,event=pr
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
-      
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3.0.0
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.REGISTRY_TOKEN }}
-
       - name: Build and push
         uses: docker/build-push-action@v5.0.0
         with:
