--- a/.github/workflows/ci-native-container.yml
+++ b/.github/workflows/ci-native-container.yml
@@ -20,11 +20,12 @@ jobs:
         shell: bash
     steps:
       - uses: actions/checkout@v4.1.1
-      - name: Set up JDK 21 Temurin
-        uses: actions/setup-java@v3.13.0
+      - uses: graalvm/setup-graalvm@v1
         with:
-          distribution: 'temurin'
           java-version: '21'
+          distribution: 'graalvm'
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          native-image-job-reports: 'true'
       - name: Cache Maven packages
         uses: actions/cache@v3.3.2
         with:
@@ -33,12 +34,7 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Generate with Maven native-resources
         run: |
-          mvn install \
-          -DskipTests \
-          -Dnative \
-          -Dquarkus.native.remote-container-build=true \
-          -Dquarkus.native.container-runtime=docker \
-          -Dquarkus.native.builder-image=quay.io/quarkus/ubi-quarkus-mandrel-builder-image:jdk-21
+          mvn install -Dnative
         # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
       - name: Update dependency graph
         uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
