--- a/.github/workflows/ci-native-container.yml
+++ b/.github/workflows/ci-native-container.yml
@@ -24,6 +24,7 @@ jobs:
         with:
           java-version: '21'
           distribution: 'mandrel'
+          version: '23.1.0.0-Final'
           github-token: ${{ secrets.GITHUB_TOKEN }}
           native-image-job-reports: 'true'
       - name: Cache Maven packages
