--- a/.github/workflows/ci-native-container.yml
+++ b/.github/workflows/ci-native-container.yml
@@ -15,70 +15,24 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
     steps:
-      - uses: actions/checkout@v4.1.1
-      - uses: graalvm/setup-graalvm@v1
+      - name: Check out the repo
+        uses: actions/checkout@v4.1.1
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3.0.0
         with:
-          java-version: '21'
-          distribution: 'mandrel'
-          version: 'mandrel-23.1.0.0-Final'
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          native-image-job-reports: 'true'
-      - name: Cache Maven packages
-        uses: actions/cache@v3.3.2
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-      - name: Generate with Maven native-resources
-        run: |
-          mvn install -Dnative
-        # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-      - name: Update dependency graph
-        uses: advanced-security/maven-dependency-submission-action@fcd7eab6b6d22946badc98d1e62665cdee93e0ae
-      - uses: actions/upload-artifact@v3.1.3
-        with:
-          name: target
-          path: target
-  push-to-registry:
-    needs: build
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-    steps:
-      - uses: actions/checkout@v4.1.1
-      - uses: actions/download-artifact@v3
-        with:
-          name: target
-          path: target
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3.0.0
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3.0.0
-      - name: Docker meta
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v5.0.0
         with:
-          images: ghcr.io/${{ github.repository }}
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3.0.0
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.REGISTRY_TOKEN }}
-      - name: Build and push
+          images: upaio/quarkus-chassis-microservice
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5.0.0
         with:
           context: .
+          file: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
